完成了登录和注册的功能开发

--- a/login.html
+++ b/login.html
@@ -86,8 +86,10 @@
     <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入 JQuery -->
     <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己封装的 baseAPI.js -->
+    <script src="/assets/js/baseAPI.js"></script>
     <!-- 导入自己的JavaScript 脚本 -->
-    <script src="/assets/js/jquery.js"></script>
+    <script src="/assets/js/login.js"></script>
 </body>
 
 </html>
