完成文章管理相关功能的开发

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="/assets/fonts/iconfont.css">
     <link rel="stylesheet" href="/assets/css/index.css">
+
 </head>
 
 <body class="layui-layout-body">
@@ -57,9 +58,12 @@
                     <li class="layui-nav-item">
                         <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-unlink"></i> 文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-unlink"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-unlink"></i>发表文章</a></dd>
+                            <dd><a href="/article/art_cate.html" target="fm"><i
+                                        class="layui-icon layui-icon-unlink"></i> 文章类别</a></dd>
+                            <dd><a href="/article/art_list.html" target="fm"><i
+                                        class="layui-icon layui-icon-unlink"></i>文章列表</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><i
+                                        class="layui-icon layui-icon-unlink"></i>发表文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
